# EcoNutriScore-Backend

./: .gitignore  Dockerfile  README.md  cache.py  database.py  main.py  openapi.json  package-lock.json  pyproject.toml  requirement.txt
.github/workflows/: deploy.yml
.venv312/: pyvenv.cfg
capston_app/: database.py  main.py  models.py
models/: dtos.py  models.py
repositories/: food_repository.py  history_repository.py  product_repository.py  score_rule_repository.py  user_repository.py
routers/: admin_router.py  food_router.py  history_router.py  product_router.py  recommendation_router.py  user_router.py
services/: additive_service.py  admin_service.py  barcode_scanning_service.py  final_grade_calculation_service.py  food_analysis_service.py  food_evaluation_service.py  food_normalization_service.py  food_orchestrator_service.py  food_recommendation_service.py  food_retrieval_service.py  history_service.py  product_evaluation_service.py  product_normalization_service.py  product_pipeline_service.py  recommendation_service.py  score_retrieval_service.py  score_service.py  total_score_service.py  user_service.py
tests/Services/: test_barcode_scanning_service.py  test_product_evaluation_service.py  test_total_score_service.py
